--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,8 @@
 {
-  "version": 2,
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "/Backend/api.py"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/Frontend/$1"
+      "destination": "/api/index.py"
     }
   ]
 }
